# universal-TimeTabling

./: CMakeLists.txt  readme.md
forms/: generationwidget.ui  groupdetailswidget.ui  groupschedulewidget.ui  gruposwidget.ui  mainwindow.ui  quarterdetailswidget.ui  quarterswidget.ui  roomdetailswidget.ui  saloneswidget.ui  scheduleswidget.ui  teacherdetailswidget.ui  teacherdisponibilitywidget.ui  teacherschedulewidget.ui
include/: conjunto_materias.h  generationwidget.h  groupdetailswidget.h  groupschedulewidget.h  grupo.h  grupos.h  gruposwidget.h  horario.h  horario_disponibilidad.h  maestro.h  maestros.h  mainwindow.h  materia.h  materias.h  modificaciones_objetos.h  quarterdetailswidget.h  quarterswidget.h  roomdetailswidget.h  salon.h  salones.h  saloneswidget.h  scheduleswidget.h  teacherdetailswidget.h  teacherdisponibilitywidget.h  teacherschedulewidget.h  universal_time_tabling.h
src/: conjunto_materias.cpp  generationwidget.cpp  groupdetailswidget.cpp  groupschedulewidget.cpp  grupos.cpp  gruposwidget.cpp  horario.cpp  horario_disponibilidad.cpp  maestros.cpp  main.cpp  mainwindow.cpp  materias.cpp  modificaciones_objetos.cpp  quarterdetailswidget.cpp  quarterswidget.cpp  roomdetailswidget.cpp  salones.cpp  saloneswidget.cpp  scheduleswidget.cpp  teacherdetailswidget.cpp  teacherdisponibilitywidget.cpp  teacherschedulewidget.cpp  universal_time_tabling.cpp
src/csv/: conjuntos_materias.csv  grupos.csv  horario_grupos_generado.csv  horario_maestros_generado.csv  horario_salones_generado.csv  maestros.csv  materias.csv  salones.csv
